# lang_python

./: .gitignore  CMakeLists.txt  README  README.md  TODO.txt  conanfile.py  setup.py.in
cmake/: PythonModuleBuilder.cmake  UbiTrackDetectPython.cmake
doc/: ubitrack_basic_demo.ipynb
include/ubitrack_python/: BackgroundImage.h  opaque_types.h  pystreambuf.h  pyubitrack.h  wrap_streambuf.h
lib/ubitrack/core/: __init__.py  serialization.py  utcalibration.py  utmath.py  utmeasurement.py  ututil.py
lib/ubitrack/dataflow/: __init__.py  graph.py  utdataflow.py
lib/ubitrack/facade/: __init__.py  utfacade.py
lib/ubitrack/haptics/: __init__.py  uthaptics.py
lib/ubitrack/vision/: __init__.py  utvision.py
lib/ubitrack/visualization/: __init__.py  utvisualization.py
src/: BackgroundImage.cpp  CMakeLists.txt  core_calibration.hpp  core_math.cpp  core_math.hpp  core_measurement.cpp  core_measurement.hpp  core_serialization.hpp  core_util.hpp  dataflow_dataflow.hpp  dataflow_graph.hpp  facade_main.hpp  hapticcalibration_main.hpp  ubitrack.cpp  vision_main.hpp  visualization_main.hpp
src/core/: CMakeLists.txt  util_serialization.cpp  wrap_utCalibration.cpp  wrap_utMath.cpp  wrap_utMeasurement.cpp  wrap_utUtil.cpp
src/dataflow/: CMakeLists.txt  wrap_utDataflow.cpp  wrap_utGraph.cpp
src/facade/: CMakeLists.txt  wrap_utFacade.cpp
src/haptics/: CMakeLists.txt  wrap_utHaptics.cpp
src/utComponents/: CMakeLists.txt  PythonComponent.cpp
src/vision/: CMakeLists.txt  wrap_utVision.cpp
src/visualization/: BackgroundImage.cpp  CMakeLists.txt  wrap_utRenderAPI.cpp.cpp  wrap_utVisualization.cpp
tests/: position_record_test.dfg  position_record_test.srg  single_pullsinkpose.dfg  single_pullsinkpose.srg  single_pushsinkpose.dfg  single_pushsinkpose.srg  test_positionlist.dfg  test_positionlist.srg  test_pull_source_pose.dfg  test_pull_source_pose.srg  test_utDataflow.py  test_utFacade.py  test_utMath.py  test_utMeasurement.py  test_utUtil.py
